2013-07-13 Pierrick Caillon <pierrick.caillon@plan-net.fr>
	* Feature: Instantiated nodes are put in a repository by externalCode or idx.
	* Feature: Recall node instance from repository in node getter when the node have a related idx or externalCode attribute.

2013-06-27 Pierrick Caillon <pierrick.caillon@plan-net.fr>
	* Change: All requested are cached. Previously not cached items are removed upon cache update.

2013-06-24 Pierrick Caillon <pierrick.caillon@plan-net.fr>
	* Added APIService::getCityList.
	* Added APIService::getLineScheduleByStopArea.

2013-06-21 Pierrick Caillon <pierrick.caillon@plan-net.fr>
	* Added cache scheduler task and required dependencies.
	* Added APIService::getEndOfCourseByStopIdx.

2013-06-20 Pierrick Caillon <pierrick.caillon@plan-net.fr>
	* Added APIService::getDepartureBoardByStopAreaForLine.
	* Added APIService::getStopAreasByLineCode.
	* Added Vehicule and Equipment nodes.

2013-06-19 Pierrick Caillon <pierrick.caillon@plan-net.fr>
	* Added APIService::getStopAreasByLineCode.
	* Bug Fix.

2013-03-26 Pierrick Caillon <pierrick.caillon@plan-net.fr>
	* Fix: Impact and Event element name.
	* Fix: Missing Comment node parsing.
	* Added all BinaryCriteria flags as constants.
	* Added flags support in APIService::getBinaryCriteria.

2013-03-25 Pierrick Caillon <pierrick.caillon@plan-net.fr>
	* Added TYPO3 version dependency.
	* Added Impact and Event node.
	* Added ImpactList in APIService::getDepartureBoard* methods.
	* Added ImpactList in APIService::getPlanJourney method.

2012-01-17 Pierrick Caillon <pierrick@in-cite.net>
	* Corrected coordinates conversion using http://www.destineo.fr/extension/NavitiaPack/design/standard/javascript/conversion.js
	* Changed Debug output method. Now at the end of the HTML. Can be forced on top with navitia_debug=2 instead of 1.

2012-01-09 Pierrick Caillon <pierrick@in-cite.net>
	* Added AddressType Node.
	* Added type property in Address node.

2012-01-06 Pierrick Caillon <pierrick@in-cite.net>